--- a/lib/user-view/template.html
+++ b/lib/user-view/template.html
@@ -1,5 +1,5 @@
 <div class="comments">
-  <div class="comments-count">{count} comments</div>
+  <!--<div class="comments-count">{count} comments</div>-->
   <div class="comments-user">
     <img class="avatar" data-src="avatar"/>
     <textarea class="message" placeholder="leave a comment…"></textarea>
